enhanced all java skills by iterating eval skills with a realistic test input after thin router